[package]
name = "terra_nft_stub"
version = "0.0.1"
authors = ["rustroid"]
edition = "2018"
description = "A CW721 contract that allows easy stub tokens to be created and used in local test environments"
license = "Apache-2.0"
repository = "https://github.com/vecterra/terra-nft-stub"
homepage = ""
documentation = ""

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw721 = "0.9.2"
cw721-base = "0.9.1"
cw721-metadata-onchain = { version = "^0.9", features = ["library"] }
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = "0.9.1"
schemars = "0.8.6"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
serde-json-wasm="0.3.1"

[dev-dependencies]
cosmwasm-schema = "0.16.0"

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
          --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
              cosmwasm/rust-optimizer:0.12.3"""
optimize-w32 = """docker run --rm -v <a windows mount path>/code  \
            --mount type=volume,source=terra-nft-stub_cache,target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
            cosmwasm/rust-optimizer:0.12.3"""
