[package]
name = "tooling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "^1.0"
bitcoin = "^0.26"
log = "0.4.14"
serde_json = "1.0.73"
terra-rust-api = { path = "../../terra-rust/terra-rust-api" }
env_logger = "^0.9"
tokio = { version = "1.4", features = ["full"] }
